syntax = "proto3";
option java_multiple_files = true;
package ba.unsa.etf.pnwt.systemeventsservice.grpc;

message SystemEventRequest {
  string timestamp = 1;
  string microservice = 2;
  string user = 3;
  string action = 4;
  string resource = 5;
  string responseType = 6;
}

message SystemEventResponse {
  string responsemessage = 1;
}

service SystemEventsService {
  rpc log(SystemEventRequest) returns (SystemEventResponse);
}